# PromptGate

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
adapters/claude/: CLAUDE.md
adapters/codex/: AGENTS.md
core/lexicon/: default-user-lexicon.yaml  schema.yaml
core/output-contract/: answer-contract.md  promptgate-result.schema.json
core/prompt-refiner/: SKILL.md
core/skill-recommender/: matching-policy.md  scoring-policy.yaml
core/skill-registry/: schema.yaml
docs/: architecture.md  compatibility.md  configuration.md  contributing.md  quickstart.md
evals/: refinement-cases.yaml  risk-policy-cases.yaml
promptgate/: __init__.py  cli.py  config.py  doctor.py  eval_runner.py  eval_scoring.py  eval_validation.py  guards.py  hook_io.py  hooks.py  lexicon.py  llm.py  preflight.py  prompts.py  provider_eval.py  registry.py  resources.py  result.py  runtime.py
scripts/: __init__.py  validate-evals.py  validate_evals.py  verify-wheel-install.py
tests/: __init__.py  test_promptgate_adapter_hooks.py  test_promptgate_cli.py  test_promptgate_config.py  test_promptgate_doctor.py  test_promptgate_eval_runner.py  test_promptgate_eval_scoring.py  test_promptgate_guards.py  test_promptgate_hook_io.py  test_promptgate_hooks.py  test_promptgate_lexicon.py  test_promptgate_llm.py  test_promptgate_package.py  test_promptgate_preflight.py  test_promptgate_provider_eval.py  test_promptgate_registry.py  test_promptgate_resources.py  test_promptgate_result.py  test_promptgate_runtime.py  test_validate_evals.py
(+35 files in other folders)
